--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lodash": "2.2.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": ">=0.4.0",
     "grunt-contrib-jshint": "0.6.4",
     "jshint-stylish": "0.1.3"
   },
