--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "dependencies": {
     "chalk": "0.2.1",
-    "grunt": "~0.4.1",
+    "grunt": ">=0.4.0",
     "lodash": "2.2.0"
   },
   "devDependencies": {
@@ -29,6 +29,6 @@
     "jshint-stylish": "0.1.3"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": ">=0.4.0"
   }
 }
